--- a/server/public/assets/css/style.css
+++ b/server/public/assets/css/style.css
@@ -20,9 +20,10 @@ header {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 2rem;
+  width: 100%;
+  height: 2.8rem;
   padding: 0 0.5rem;
-  margin: 10px 0;
+  margin: 0;
   background-color: whitesmoke;
 }
 
