--- a/server/public/assets/css/style.css
+++ b/server/public/assets/css/style.css
@@ -24,7 +24,7 @@ header {
   height: 2.8rem;
   padding: 0 0.5rem;
   margin: 0;
-  background-color: whitesmoke;
+  background-color: #3b3b3b;
 }
 
 button {
@@ -48,6 +48,7 @@ textarea {
   flex-grow: 1;
   width: 100%;
   padding: 12px 5px;
+  margin: 0;
   box-sizing: border-box;
   border: none;
   background-color: black;
