--- a/server/public/assets/css/style.css
+++ b/server/public/assets/css/style.css
@@ -40,7 +40,7 @@ header {
   height: 2.8rem;
   padding: 0 0.5rem;
   margin: 0;
-  background-color: #3b3b3b;
+  background-color: #222;
 }
 
 button {
